feat: Integrate Blink for EVM wallets for anti-sandwich attacks.
- Add toggle in privacy settings to enable/disable
- When enabled, route all evm broadcast rpc calls via Blink

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -1074,6 +1074,7 @@
   "upto": "حتى ${value}",
   "usb": "USB",
   "use": "التبديل إلى",
+  "use_blink_protection": "استخدم الحماية من الرمش",
   "use_card_info_three": "استخدم البطاقة الرقمية عبر الإنترنت أو مع طرق الدفع غير التلامسية.",
   "use_card_info_two": "يتم تحويل الأموال إلى الدولار الأمريكي عند الاحتفاظ بها في الحساب المدفوع مسبقًا ، وليس بالعملات الرقمية.",
   "use_device_theme": "استخدم موضوع الجهاز",
