--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -1074,6 +1074,7 @@
   "upto": "до ${value}",
   "usb": "USB",
   "use": "Смяна на ",
+  "use_blink_protection": "Използвайте защита от мигане",
   "use_card_info_three": "Използвайте дигиталната карта онлайн или чрез безконтактен метод на плащане.",
   "use_card_info_two": "Средствата се обръщат в USD, когато биват запазени в предплатената карта, а не в дигитална валута.",
   "use_device_theme": "Използвайте темата за устройството",
