--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -1074,6 +1074,7 @@
   "upto": "až ${value}",
   "usb": "USB",
   "use": "Přepnout na ",
+  "use_blink_protection": "Použijte ochranu proti mrknutí",
   "use_card_info_three": "Použijte tuto digitální kartu online nebo bezkontaktními platebními metodami.",
   "use_card_info_two": "Prostředky jsou převedeny na USD, když jsou drženy na předplaceném účtu, nikoliv na digitální měnu.",
   "use_device_theme": "Použijte téma zařízení",
