--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -1075,6 +1075,7 @@
   "upto": "up to ${value}",
   "usb": "USB",
   "use": "Switch to ",
+  "use_blink_protection": "Use Blink Protection",
   "use_card_info_three": "Use the digital card online or with contactless payment methods.",
   "use_card_info_two": "Funds are converted to USD when they're held in the prepaid account, not in digital currencies.",
   "use_device_theme": "Use Device Theme",
