--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -837,6 +837,7 @@
   "upto": "Kóva peve ${value}",
   "usb": "USB",
   "use": "Reipuru pe",
+  "use_blink_protection": "Eipuru ñeñangareko parpadeo rehegua .",
   "use_card_info_three": "Eipuru peteĩ tarjeta línea rehegua térã ambue jehepyme’ẽ ojepokó’ỹva.",
   "use_card_info_two": "Pe viru oñemoambue USD-pe ojeguerekóramo cuenta prepaga-pe; ndaha’éi moneda digital-pe.",
   "use_ssl": "Eipuru SSL",
