--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -1076,6 +1076,7 @@
   "upto": "har zuwa ${value}",
   "usb": "Alib",
   "use": "Canja zuwa",
+  "use_blink_protection": "Yi amfani da Kariyar Blink",
   "use_card_info_three": "Yi amfani da katin dijital akan layi ko tare da hanyoyin biyan kuɗi mara lamba.",
   "use_card_info_two": "Ana canza kuɗi zuwa dalar Amurka lokacin da ake riƙe su a cikin asusun da aka riga aka biya, ba cikin agogon dijital ba.",
   "use_device_theme": "Yi amfani da taken na'urar",
