--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -1076,6 +1076,7 @@
   "upto": "${value} तक",
   "usb": "USB",
   "use": "उपयोग ",
+  "use_blink_protection": "ब्लिंक प्रोटेक्शन का उपयोग करें",
   "use_card_info_three": "डिजिटल कार्ड का ऑनलाइन या संपर्क रहित भुगतान विधियों के साथ उपयोग करें।",
   "use_card_info_two": "डिजिटल मुद्राओं में नहीं, प्रीपेड खाते में रखे जाने पर निधियों को यूएसडी में बदल दिया जाता है।",
   "use_device_theme": "डिवाइस थीम का उपयोग करें",
