--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -1072,6 +1072,7 @@
   "upto": "մինչև ${value}",
   "usb": "USB",
   "use": "Փոխեք ",
+  "use_blink_protection": "Օգտագործեք Blink Protection-ը",
   "use_card_info_three": "Օգտագործեք թվային քարտը առցանց կամ անշփման վճարման մեթոդներով։",
   "use_card_info_two": "Միջոցները փոխարկվում են ԱՄՆ դոլար երբ դրանք պահվում են կանխավճարային հաշվեկշռում, ոչ թե թվային արժույթներում։",
   "use_device_theme": "Օգտագործեք սարքի թեման",
