--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -1074,6 +1074,7 @@
   "upto": "${value} အထိ",
   "usb": "ယူအက်စ်ဘီ",
   "use": "သို့ပြောင်းပါ။",
+  "use_blink_protection": "Blink Protection ကိုသုံးပါ။",
   "use_card_info_three": "ဒစ်ဂျစ်တယ်ကတ်ကို အွန်လိုင်း သို့မဟုတ် ထိတွေ့မှုမဲ့ ငွေပေးချေမှုနည်းလမ်းများဖြင့် အသုံးပြုပါ။",
   "use_card_info_two": "ဒစ်ဂျစ်တယ်ငွေကြေးများဖြင့်မဟုတ်ဘဲ ကြိုတင်ငွေပေးချေသည့်အကောင့်တွင် သိမ်းထားသည့်အခါ ရန်ပုံငွေများကို USD သို့ ပြောင်းလဲပါသည်။",
   "use_device_theme": "Device Theme ကိုသုံးပါ",
