--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -1074,6 +1074,7 @@
   "upto": "tot ${value}",
   "usb": "USB",
   "use": "Gebruik ",
+  "use_blink_protection": "Gebruik Knipperbeveiliging",
   "use_card_info_three": "Gebruik de digitale kaart online of met contactloze betaalmethoden.",
   "use_card_info_two": "Tegoeden worden omgezet naar USD wanneer ze op de prepaid-rekening staan, niet in digitale valuta.",
   "use_device_theme": "Gebruik apparaatthema",
