--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -1075,6 +1075,7 @@
   "upto": "до ${value}",
   "usb": "USB",
   "use": "Использовать ",
+  "use_blink_protection": "Используйте защиту от моргания",
   "use_card_info_three": "Используйте цифровую карту онлайн или с помощью бесконтактных способов оплаты.",
   "use_card_info_two": "Средства конвертируются в доллары США, когда они хранятся на предоплаченном счете, а не в цифровых валютах.",
   "use_device_theme": "Используйте тему устройства",
