--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -1074,6 +1074,7 @@
   "upto": "สูงสุด ${value}",
   "usb": "ยูเอสบี",
   "use": "สลับไปที่ ",
+  "use_blink_protection": "ใช้การป้องกันการกะพริบตา",
   "use_card_info_three": "ใช้บัตรดิจิตอลออนไลน์หรือผ่านวิธีการชำระเงินแบบไม่ต้องใช้บัตรกระดาษ",
   "use_card_info_two": "เงินจะถูกแปลงค่าเป็นดอลลาร์สหรัฐเมื่อถือไว้ในบัญชีสำรองเงิน ไม่ใช่สกุลเงินดิจิตอล",
   "use_device_theme": "ใช้ธีมอุปกรณ์",
