--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -1075,6 +1075,7 @@
   "upto": "до ${value}",
   "usb": "USB",
   "use": "Використати ",
+  "use_blink_protection": "Використовуйте захист від моргання",
   "use_card_info_three": "Використовуйте цифрову картку онлайн або за допомогою безконтактних методів оплати.",
   "use_card_info_two": "Кошти конвертуються в долари США, якщо вони зберігаються на передплаченому рахунку, а не в цифрових валютах.",
   "use_device_theme": "Використовуйте тему пристрою",
