--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -1076,6 +1076,7 @@
   "upto": "${value} تک",
   "usb": "یو ایس بی",
   "use": "تبدیل کرنا",
+  "use_blink_protection": "پلک جھپکنے کے تحفظ کا استعمال کریں",
   "use_card_info_three": "ڈیجیٹل کارڈ آن لائن یا کنٹیکٹ لیس ادائیگی کے طریقوں کے ساتھ استعمال کریں۔",
   "use_card_info_two": "رقوم کو امریکی ڈالر میں تبدیل کیا جاتا ہے جب پری پیڈ اکاؤنٹ میں رکھا جاتا ہے، ڈیجیٹل کرنسیوں میں نہیں۔",
   "use_device_theme": "ڈیوائس تھیم استعمال کریں",
