--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -1075,6 +1075,7 @@
   "upto": "kò tóbi ju ${value}",
   "usb": "USB",
   "use": "Lo",
+  "use_blink_protection": "Lo Idaabobo Seju",
   "use_card_info_three": "Ẹ lo káàdí ayélujára lórí wẹ́ẹ̀bù tàbí ẹ lò ó lórí àwọn ẹ̀rọ̀ ìrajà tíwọn kò kò.",
   "use_card_info_two": "A pààrọ̀ owó sí owó Amẹ́ríkà tó bá wà nínú àkanti t'á ti fikún tẹ́lẹ̀tẹ́lẹ̀. A kò kó owó náà nínú owó ayélujára.",
   "use_device_theme": "Lo akori ẹrọ",
