--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -1076,6 +1076,7 @@
   "upto": "até ${value}",
   "usb": "USB",
   "use": "Use PIN de ",
+  "use_blink_protection": "Use proteção contra piscar",
   "use_card_info_three": "Use o cartão digital online ou com métodos de pagamento sem contato.",
   "use_card_info_two": "Os fundos são convertidos para USD quando mantidos na conta pré-paga, não em moedas digitais.",
   "use_device_theme": "Use o tema do dispositivo",
