--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -1054,6 +1054,7 @@
   "tx_rejected_dust_output": "Транзакция, отхвърлена от мрежови правила, ниска стойност на изхода (прах). Моля, увеличете сумата.",
   "tx_rejected_dust_output_send_all": "Транзакция, отхвърлена от мрежови правила, ниска стойност на изхода (прах). Моля, проверете баланса на монетите, избрани под контрол на монети.",
   "tx_rejected_vout_negative": "Няма достатъчно баланс, за да платите за таксите на тази транзакция. Моля, проверете баланса на монетите под контрол на монетите.",
+  "tx_retry_message": "Възникна грешка при обработката на транзакцията. Моля, опитайте отново транзакцията.",
   "tx_wrong_balance_exception": "Нямате достатъчно ${currency}, за да изпратите тази сума.",
   "tx_wrong_balance_with_amount_exception": "Нямате достатъчно ${currency} За да изпратите общата сума на ${amount}",
   "tx_zero_fee_exception": "Не може да изпраща транзакция с 0 такса. Опитайте да увеличите скоростта или да проверите връзката си за най -новите оценки.",
