--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -1055,6 +1055,7 @@
   "tx_rejected_dust_output": "Транзакция отклоняется в соответствии с правилами сети, низкой выходной суммой (пыль). Пожалуйста, увеличьте сумму.",
   "tx_rejected_dust_output_send_all": "Транзакция отклоняется в соответствии с правилами сети, низкой выходной суммой (пыль). Пожалуйста, проверьте баланс монет, выбранных под контролем монет.",
   "tx_rejected_vout_negative": "Недостаточно баланс, чтобы оплатить плату этой транзакции. Пожалуйста, проверьте баланс монет под контролем монет.",
+  "tx_retry_message": "При обработке транзакции произошла ошибка. Пожалуйста, повторите транзакцию.",
   "tx_wrong_balance_exception": "У вас не хватает ${currency}, чтобы отправить эту сумму.",
   "tx_wrong_balance_with_amount_exception": "У вас недостаточно ${currency}, чтобы отправить общее количество ${amount}",
   "tx_zero_fee_exception": "Не может отправить транзакцию с платой 0. Попробуйте увеличить ставку или проверить соединение на наличие последних оценок.",
