--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -1055,6 +1055,7 @@
   "tx_rejected_dust_output": "Транзакція відхилена за допомогою мережевих правил, низька кількість вихідної кількості (пил). Будь ласка, збільшуйте суму.",
   "tx_rejected_dust_output_send_all": "Транзакція відхилена за допомогою мережевих правил, низька кількість вихідної кількості (пил). Будь ласка, перевірте баланс монет, вибраних під контролем монет.",
   "tx_rejected_vout_negative": "Недостатньо балансу, щоб оплатити плату за цю транзакцію. Будь ласка, перевірте баланс монет під контролем монет.",
+  "tx_retry_message": "Під час обробки транзакції сталася помилка. Повторіть спробу транзакції.",
   "tx_wrong_balance_exception": "У вас недостатньо ${currency}, щоб надіслати цю суму.",
   "tx_wrong_balance_with_amount_exception": "У вас недостатньо ${currency}, щоб надіслати загальну кількість ${amount}",
   "tx_zero_fee_exception": "Не вдається відправити транзакцію з 0 платежами. Спробуйте збільшити ставку або перевірити з'єднання на останні оцінки.",
