--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -1054,6 +1054,7 @@
   "tx_rejected_dust_output": "Transaction rejetée par les règles du réseau : faible quantité de sortie (poussière). Veuillez augmenter le montant.",
   "tx_rejected_dust_output_send_all": "Transaction rejetée par les règles du réseau : montant de sortie trop faible (poussière). Veuillez vérifier le solde des pièces sélectionnées dans le contrôle des pièces.",
   "tx_rejected_vout_negative": "Solde insuffisant pour payer les frais de cette transaction. Veuillez vérifier le solde des pièces dans le contrôle des pièces.",
+  "tx_retry_message": "Une erreur s'est produite lors du traitement de la transaction. Veuillez réessayer la transaction.",
   "tx_wrong_balance_exception": "Vous n'avez pas assez ${currency} pour envoyer ce montant.",
   "tx_wrong_balance_with_amount_exception": "Vous n'avez pas assez ${currency} pour envoyer le montant total de ${amount}",
   "tx_zero_fee_exception": "Impossible d'envoyer une transaction avec 0 frais. Essayez d'augmenter le taux ou de vérifier votre connexion pour les dernières estimations.",
