--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -1055,6 +1055,7 @@
   "tx_rejected_dust_output": "Transazione respinta dalle regole di rete, bassa quantità di output (dust). Si prega di aumentare l'importo.",
   "tx_rejected_dust_output_send_all": "Transazione respinta dalle regole di rete, bassa quantità di output (dust). Si prega di controllare il saldo delle monete selezionate sotto controllo delle monete.",
   "tx_rejected_vout_negative": "Il saldo disponibile non è sufficiente per pagare le commissioni di questa transazione. Si prega di controllare il saldo delle monete sotto Controllo monete.",
+  "tx_retry_message": "Si è verificato un errore durante l'elaborazione della transazione. Riprova la transazione.",
   "tx_wrong_balance_exception": "Non hai abbastanza ${currency} per inviare questo importo.",
   "tx_wrong_balance_with_amount_exception": "Non hai abbastanza ${currency} per inviare la quantità totale di ${amount}",
   "tx_zero_fee_exception": "Impossibile inviare transazioni con 0 commissioni. Prova ad aumentare le commissioni, o controlla la connessione per le ultime stime.",
