fix fiat amounts fix derrivation of rotation account addresses screen for zcash block height fix T address shields improvements Amount in disposable T shields UI improvements show pending outgoing tx in tx history

--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -515,7 +515,7 @@
   "matrix_green_dark_theme": "Tmavé téma Matrix Green",
   "max_amount": "Max: ${value}",
   "max_value": "Max: ${value} ${currency}",
-  "memo": "Memo:",
+  "memo": "Memo",
   "message": "Zpráva",
   "message_verified": "Zpráva byla úspěšně ověřena",
   "messages": "Zprávy",
