--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -515,7 +515,7 @@
   "matrix_green_dark_theme": "Matrix Green Dark Theme",
   "max_amount": "Max: ${value}",
   "max_value": "Max: ${value} ${currency}",
-  "memo": "Memo:",
+  "memo": "Memo",
   "message": "Nachricht",
   "message_verified": "Die Nachricht wurde erfolgreich überprüft",
   "messages": "Nachrichten",
