--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -515,7 +515,7 @@
   "matrix_green_dark_theme": "Matrix Green Dark Theme",
   "max_amount": "Max: ${value}",
   "max_value": "Max: ${value} ${currency}",
-  "memo": "Memo:",
+  "memo": "Memo",
   "message": "Message",
   "message_verified": "The message was successfully verified",
   "messages": "Messages",
