--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -515,7 +515,7 @@
   "matrix_green_dark_theme": "Tema Matrix Green Dark",
   "max_amount": "Max: ${value}",
   "max_value": "Max: ${value} ${currency}",
-  "memo": "Memo:",
+  "memo": "Memo",
   "message": "Pesan",
   "message_verified": "Pesan itu berhasil diverifikasi",
   "messages": "Pesan",
