--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -515,7 +515,7 @@
   "matrix_green_dark_theme": "Matrix groen donker thema",
   "max_amount": "Max: ${value}",
   "max_value": "Max: ${value} ${currency}",
-  "memo": "Memo:",
+  "memo": "Memo",
   "message": "Bericht",
   "message_verified": "Het bericht is succesvol geverifieerd",
   "messages": "Berichten",
